k8s/geddes-prod/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rcac-docs-prod
  namespace: rcac-docs
spec:
  selector:
    app: rcac-docs-prod
  ports:
    - port: 80
      targetPort: 80
  type: ClusterIP
